# EasyPaint

./: .gitignore  AUTHORS  CMakeCache.txt  CMakeLists.txt  COPYING  README.md  THANKS
EasyPaint/: EasyPaint.pro  additionaltools.cpp  additionaltools.h  colorchooser.cpp  colorchooser.h  datasingleton.cpp  datasingleton.h  easypaintenums.h  effects.cpp  effects.h  imagearea.cpp  imagearea.h  main.cpp  mainwindow.cpp  mainwindow.h  resizeimagedialog.cpp  toolbar.cpp  toolbar.h
build-easypaint-Qt_5_9_5_qt5_temporary-Debug/: Makefile  qrc_resources.cpp
distr/deb/: make_deb.sh
distr/deb/debian/: changelog  control  copyright
distr/exe/: BuildDist(alpha).bat  make_exe.iss
distr/exe/windows/: AUTHORS.txt  CHANGELOG.rtf  COPYING.rtf  README.rtf
distr/exe/windows/release/: CHANGELOG.rtf  COPYING.rtf  THANKS.txt
distr/rpm/: _service  easypaint.spec
sources/: CMakeLists.txt  Makefile  additionaltools.cpp  additionaltools.h  datasingleton.cpp  datasingleton.h  easypaint.pro  easypaintenums.h  imagearea.cpp  imagearea.h  main.cpp  mainwindow.cpp  mainwindow.h  media.qrc  paintinstruments.cpp  paintinstruments.h  palettebar.cpp  palettebar.h  palettebutton.cpp  palettebutton.h  qrc_resources.cpp  resizedialog.cpp  resizedialog.h  resizeimagedialog.h  resources.qrc  settingsdialog.cpp  settingsdialog.h  shortcutedit.cpp  shortcutedit.h  toolbar.cpp  toolbar.h  undocommand.cpp  undocommand.h  undoselection.cpp  undoselection.h
sources/dialogs/: effectsettingsdialog.cpp  effectsettingsdialog.h  resizedialog.cpp  resizedialog.h  settingsdialog.cpp  settingsdialog.h  textdialog.cpp  textdialog.h
sources/effects/: abstracteffect.cpp  abstracteffect.h  binarizationeffect.cpp  binarizationeffect.h  convolutionmatrixeffect.cpp  convolutionmatrixeffect.h  customeffect.h  effectwithsettings.cpp  effectwithsettings.h  gammaeffect.cpp  gammaeffect.h  gaussianblureffect.cpp  gaussianblureffect.h  grayeffect.cpp  grayeffect.h  kuwaharaeffect.cpp  kuwaharaeffect.h  negativeeffect.cpp  negativeeffect.h  sharpeneffect.cpp  sharpeneffect.h
sources/instruments/: abstractinstrument.cpp  abstractinstrument.h  abstractselection.cpp  abstractselection.h  colorpickerinstrument.cpp  colorpickerinstrument.h  colorpickerpaletteinstrument.cpp  colorpickerpaletteinstrument.h  curvelineinstrument.cpp  curvelineinstrument.h  ellipseinstrument.cpp  ellipseinstrument.h  eraserinstrument.cpp  eraserinstrument.h  fillinstrument.cpp  fillinstrument.h  lineinstrument.cpp  lineinstrument.h  magnifierinstrument.cpp  magnifierinstrument.h  pencilinstrument.cpp  pencilinstrument.h  rectangleinstrument.cpp  rectangleinstrument.h  selectioninstrument.cpp  selectioninstrument.h  sprayinstrument.cpp  sprayinstrument.h  textinstrument.cpp  textinstrument.h
sources/media/: EasyPaint.desktop  easypaint.desktop
sources/media/Logo/: EasyPaint Logo.cdr
sources/translations/: easypaint_cs_CZ.qm  easypaint_cs_CZ.ts  easypaint_de_DE.ts  easypaint_en_EN.ts  easypaint_fr_FR.qm  easypaint_fr_FR.ts  easypaint_pl_PL.ts  easypaint_ru_RU.qm  easypaint_ru_RU.ts  easypaint_zh_CN.ts
sources/widgets/: abstracteffectsettings.h  colorchooser.cpp  colorchooser.h  customfiltersettings.cpp  customfiltersettings.h  gaussianblurfiltersettings.cpp  gaussianblurfiltersettings.h  imagepreview.cpp  imagepreview.h  palettebar.cpp  palettebar.h  palettebutton.cpp  palettebutton.h  sharpenfiltersettings.cpp  sharpenfiltersettings.h  shortcutedit.cpp  shortcutedit.h  toolbar.cpp  toolbar.h
